force-app/main/default/objects/Sales_Funnel__c/Sales_Funnel__c.object-meta.xml
<CustomObject>
    <label>Monthly Sales Pipeline</label>
    <nameField>
        <displayFormat>SF -{0000}</displayFormat>
        <label>Monthly Sales Pipeline Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Sales Pipeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>