force-app/main/default/objects/Sales_Funnel__c/fields/Actual_Closed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Closed__c</fullName>
    <label>Actual / Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>