force-app/main/default/objects/Sales_Funnel__c/fields/Door_Application__c.field-meta.xml
<CustomField>
    <fullName>Door_Application__c</fullName>
    <label>Door Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Door_Application</valueSetName>
    </valueSet>
</CustomField>