force-app/main/default/objects/Sales_Funnel__c/fields/Door_Category__c.field-meta.xml
<CustomField>
    <fullName>Door_Category__c</fullName>
    <label>Door Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Door_Category</valueSetName>
    </valueSet>
</CustomField>