force-app/main/default/objects/Sales_Funnel__c/fields/Expected_Closure_on__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closure_on__c</fullName>
    <label>Expected Closure on</label>
    <type>Date</type>
</CustomField>