force-app/main/default/objects/Sales_Funnel__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Monthly Sales Pipeline</relationshipLabel>
    <relationshipName>Monthly_Sales_Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>