force-app/main/default/objects/Sales_Funnel__c/fields/New_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Number__c</fullName>
    <label>New Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>