force-app/main/default/objects/Sales_Funnel__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Monthly Sales Pipeline</relationshipLabel>
    <relationshipName>Monthly_Sales_Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>