force-app/main/default/objects/Sales_Funnel__c/fields/Order_Staus__c.field-meta.xml
<CustomField>
    <fullName>Order_Staus__c</fullName>
    <label>Order Staus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yet to submit the quote</fullName>
            </value>
            <value>
                <fullName>quote submitted</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Lead won</fullName>
            </value>
            <value>
                <fullName>Lead lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>