force-app/main/default/objects/Sales_Funnel__c/fields/Order_Time_line_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_line_Time_Frame__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Order Time line/ Time Frame</label>
    <type>Date</type>
</CustomField>