force-app/main/default/objects/Sales_Funnel__c/fields/Order_Time_line_Time_Frame_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_line_Time_Frame_Date__c</fullName>
    <formula>DATE(
VALUE(text(Order_Time_line_Time_Frame_Year__c)),
CASE(
text(Order_Time_line_Time_Frame_Month__c),
&quot;January&quot;, 1,
&quot;February&quot;, 2,
&quot;March&quot;, 3,
&quot;April&quot;, 4,
&quot;May&quot;, 5,
&quot;June&quot;, 6,
&quot;July&quot;, 7,
&quot;August&quot;, 8,
&quot;September&quot;, 9,
&quot;October&quot;, 10,
&quot;November&quot;, 11,
&quot;December&quot;, 12,
1
),
1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Time line/ Time Frame Date</label>
    <type>Date</type>
</CustomField>