force-app/main/default/objects/Sales_Funnel__c/fields/Order_Time_line_Time_Frame_Month__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_line_Time_Frame_Month__c</fullName>
    <label>Order Time line/ Time Frame Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month_Name</valueSetName>
    </valueSet>
</CustomField>