force-app/main/default/objects/Sales_Funnel__c/fields/Order_Time_line_Time_Frame_Year__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_line_Time_Frame_Year__c</fullName>
    <label>Order Time line/ Time Frame	Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>