force-app/main/default/objects/Sales_Funnel__c/fields/Order_Time_lineTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>Order_Time_lineTimeFrame__c</fullName>
    <label>Order Time line/ Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 TO 3 MONTH</fullName>
            </value>
            <value>
                <fullName>3 TO 6 MONTH</fullName>
            </value>
            <value>
                <fullName>6 TO 9 MONTH</fullName>
            </value>
            <value>
                <fullName>9 TO 12 MONTH</fullName>
            </value>
            <value>
                <fullName>12 to 15 MONTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>