force-app/main/default/objects/Sales_Funnel__c/fields/Postpone_Door_Quality__c.field-meta.xml
<CustomField>
    <fullName>Postpone_Door_Quality__c</fullName>
    <label>Postpone Door Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>