force-app/main/default/objects/Sales_Funnel__c/fields/Previous_Month_Backlog__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Backlog__c</fullName>
    <label>Previous Month Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>