force-app/main/default/objects/Sales_Funnel__c/fields/Probability_Stage__c.field-meta.xml
<CustomField>
    <fullName>Probability_Stage__c</fullName>
    <label>Probability Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>