force-app/main/default/objects/Sales_Funnel__c/fields/Projections__c.field-meta.xml
<CustomField>
    <fullName>Projections__c</fullName>
    <label>Projections Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>