force-app/main/default/objects/Sales_Funnel__c/fields/Reason_for_Loosing_the_Order__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loosing_the_Order__c</fullName>
    <label>Reason for Loosing the Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Issue</fullName>
            </value>
            <value>
                <fullName>CPL Veneer</fullName>
            </value>
            <value>
                <fullName>Custom / Features</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>