force-app/main/default/objects/Sales_Funnel__c/fields/Reason_for_Missing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Missing__c</fullName>
    <label>Reason for Missing</label>
    <type>TextArea</type>
</CustomField>