force-app/main/default/objects/Sales_Funnel__c/fields/Sales_Funnel_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel_Month__c</fullName>
    <label>Sales Funnel Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month_Name</valueSetName>
    </valueSet>
</CustomField>