force-app/main/default/objects/Sales_Funnel__c/fields/Sales_Funnel_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel_Number__c</fullName>
    <displayFormat>SF-{0000}</displayFormat>
    <label>Sales Funnel Number</label>
    <type>AutoNumber</type>
</CustomField>