force-app/main/default/objects/Sales_Funnel__c/fields/Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OCG Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Funnel</relationshipName>
    <type>Lookup</type>
</CustomField>