force-app/main/default/objects/Sales_Funnel__c/fields/Total_Projection__c.field-meta.xml
<CustomField>
    <fullName>Total_Projection__c</fullName>
    <formula>Number_of_Doors__c +  Previous_Month_Backlog__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Projection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>