force-app/main/default/objects/Sales_Funnel__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Year__c</columns>
    <columns>Channel_Partner__c</columns>
    <filterScope>Mine</filterScope>
    <label>This Month</label>
</ListView>